# cross_platform_sdl2_cmake_opengl

./: CMakeLists.txt
src/: CMakeLists.txt  test1.cpp
